--- a/B20_Ex02_02/B20_Ex02_02.csproj
+++ b/B20_Ex02_02/B20_Ex02_02.csproj
@@ -38,5 +38,10 @@
     <Compile Include="Board.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Ex02.ConsoleUtils">
+      <HintPath>..\..\..\..\..\..\temp\Ex02.ConsoleUtils.dll</HintPath>
+    </Reference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
