--- a/B20_Ex02_02/B20_Ex02_02.csproj
+++ b/B20_Ex02_02/B20_Ex02_02.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
