--- a/B20_Ex02_02/B20_Ex02_02.csproj
+++ b/B20_Ex02_02/B20_Ex02_02.csproj
@@ -38,6 +38,7 @@
     <Compile Include="Board.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="UserInterface.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Ex02.ConsoleUtils">
