--- a/B20_Ex02_02/B20_Ex02_02.csproj
+++ b/B20_Ex02_02/B20_Ex02_02.csproj
@@ -37,8 +37,12 @@
   <ItemGroup>
     <Compile Include="Board.cs" />
     <Compile Include="Player.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="UserInterface.cs" />
+    <Compile Include="Program.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
+    <Compile Include="UserInterface.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Ex02.ConsoleUtils">
