--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 B20_Ex02_02/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
 B20_Ex02_02/obj/Debug/B20_Ex02_02.csprojAssemblyReference.cache
 *.lock
+*.exe
